// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MostRecentSpinResults renders when there are more spin results than will be displayed 1`] = `
<div
  className="MostRecentSpinResults-component"
>
  <ul>
    <div
      className="recent-spin-result"
      style={
        Object {
          "backgroundColor": "#222222",
        }
      }
    >
      20
    </div>
    <div
      className="recent-spin-result"
      style={
        Object {
          "backgroundColor": "#d94848",
        }
      }
    >
      19
    </div>
    <div
      className="recent-spin-result"
      style={
        Object {
          "backgroundColor": "#d94848",
        }
      }
    >
      18
    </div>
    <div
      className="recent-spin-result"
      style={
        Object {
          "backgroundColor": "#222222",
        }
      }
    >
      17
    </div>
    <div
      className="recent-spin-result"
      style={
        Object {
          "backgroundColor": "#d94848",
        }
      }
    >
      16
    </div>
    <div
      className="recent-spin-result"
      style={
        Object {
          "backgroundColor": "#222222",
        }
      }
    >
      15
    </div>
    <div
      className="recent-spin-result"
      style={
        Object {
          "backgroundColor": "#d94848",
        }
      }
    >
      14
    </div>
    <div
      className="recent-spin-result"
      style={
        Object {
          "backgroundColor": "#222222",
        }
      }
    >
      13
    </div>
    <div
      className="recent-spin-result"
      style={
        Object {
          "backgroundColor": "#d94848",
        }
      }
    >
      12
    </div>
    <div
      className="recent-spin-result"
      style={
        Object {
          "backgroundColor": "#222222",
        }
      }
    >
      11
    </div>
    <div
      className="recent-spin-result"
      style={
        Object {
          "backgroundColor": "#222222",
        }
      }
    >
      10
    </div>
    <div
      className="recent-spin-result"
      style={
        Object {
          "backgroundColor": "#d94848",
        }
      }
    >
      9
    </div>
    <div
      className="recent-spin-result"
      style={
        Object {
          "backgroundColor": "#222222",
        }
      }
    >
      8
    </div>
    <div
      className="recent-spin-result"
      style={
        Object {
          "backgroundColor": "#d94848",
        }
      }
    >
      7
    </div>
    <div
      className="recent-spin-result"
      style={
        Object {
          "backgroundColor": "#222222",
        }
      }
    >
      6
    </div>
    <div
      className="recent-spin-result"
      style={
        Object {
          "backgroundColor": "#d94848",
        }
      }
    >
      5
    </div>
    <div
      className="recent-spin-result"
      style={
        Object {
          "backgroundColor": "#222222",
        }
      }
    >
      4
    </div>
    <div
      className="recent-spin-result"
      style={
        Object {
          "backgroundColor": "#d94848",
        }
      }
    >
      3
    </div>
    <div
      className="recent-spin-result"
      style={
        Object {
          "backgroundColor": "#222222",
        }
      }
    >
      2
    </div>
    <div
      className="recent-spin-result"
      style={
        Object {
          "backgroundColor": "#d94848",
        }
      }
    >
      1
    </div>
  </ul>
</div>
`;

exports[`MostRecentSpinResults renders when there are multiple spin results 1`] = `
<div
  className="MostRecentSpinResults-component"
>
  <ul>
    <div
      className="recent-spin-result"
      style={
        Object {
          "backgroundColor": "#222222",
        }
      }
    >
      2
    </div>
    <div
      className="recent-spin-result"
      style={
        Object {
          "backgroundColor": "#d94848",
        }
      }
    >
      1
    </div>
    <div
      className="recent-spin-result"
      style={
        Object {
          "backgroundColor": "#016D29",
        }
      }
    >
      00
    </div>
  </ul>
</div>
`;

exports[`MostRecentSpinResults renders when there are no spin results 1`] = `
<div
  className="MostRecentSpinResults-component"
>
  <ul />
</div>
`;
